<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/navigation_transactions"
        android:icon="@drawable/ic_transactions"
        android:title="@string/menu_transactions" />

    <item
        android:id="@+id/navigation_budget"
        android:icon="@drawable/ic_budget"
        android:title="@string/menu_budget" />

    <item
        android:id="@+id/navigation_analysis"
        android:icon="@drawable/ic_analysis"
        android:title="@string/menu_analysis" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings" />
</menu> 